[package]
name = "markdown_wiki2_single"
version = "1.1.9"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }
dotenv = "0.15.0"
jsonwebtoken = "7"
bcrypt = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
headers = "0.3"
tower = "0.4"
tower-http = { version = "0.5.2", features=["full"]}
futures-util = "0.3.30"
tokio-util = { version = "0.7.10", features=["full"] }
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }
http-body-util = "0.1.0"
clap = "4.5.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
thiserror = "1.0"
tera = "1.20"
once_cell = "1.20.3"
totp-rs = { version = "5", features = ["qr"] }
base32 = "0.4"
rand = "0.8"
rust-embed = "8.5.0"
anyhow = "1.0"
rexif = "0.7.5"
dirs = "5.0"
webbrowser = "1.0.6"
windows = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }

[build-dependencies]
embed-resource = "3.0"